--- a/wx/pages/info/speciality/statistics/statistics.wxml
+++ b/wx/pages/info/speciality/statistics/statistics.wxml
@@ -1,3 +1,3 @@
 <view class="index">
-  <ec-canvas id="mychart-dom-line" canvas-id="mychart-line" ec="{{ ec }}"></ec-canvas>
+  <ec-canvas id="mychart-dom-point" canvas-id="mychart-point" ec="{{ ec }}"></ec-canvas>
 </view>
