--- a/wx/pages/user/weather/weather.wxml
+++ b/wx/pages/user/weather/weather.wxml
@@ -1,2 +1,20 @@
 <!--pages/user/weather/weather.wxml-->
-<text>pages/user/weather/weather.wxml</text>
+<view class="main">
+  <view class="filter-tab sort-tab">
+    <text bindtap="setSortBy" data-sortindex="{{index}}" data-sortid="{{item.id}}" class="{{sortindex==index?'active':''}}" wx:for="{{sort}}" wx:key="{{item.id}}">{{item.title}}</text>
+  </view>
+	<view class="conference-list">
+    <navigator class="conference-item" wx:for="{{activitylist}}" wx:key="{{item.id}}">
+      <view class="conference-item-text">
+        <view class="conference-item-title">{{item.name}}</view>
+        <view class="conference-item-info activity-item-info">
+          <text class="icon-time">{{item.time}}</text>
+          <text class="icon-xinxi">{{item.coments}}</text>
+        </view>
+        <view class="conference-item-info">
+          <text class="icon-zuobiao">{{item.address}}</text>
+        </view>
+      </view>
+    </navigator>
+  </view>
+</view>
